@@ -3,6 +3,7 @@ HEAD
 	  running, hope that this will avoid problems with large logs
 	+ Increased maximum size of message field in events
 	+ Added script to purge logs
+	+ Bug fix: multi-domain logs can be enabled again
 1.3.12
 	+ Added type for EBox::Dashboard::Value to stand out warning
 	  messages in dashboard
